kubernetes/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  annotations:
    kubernetes.io/change-cause: "update..."
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-php
  template:
    metadata:
      labels:
        app:  worker-php
    spec:
      securityContext:
        fsGroup: 82

      containers:
        - name: worker-container
          image: islemdjennane/elearning-php:11
          command:
            - php
          args:
            - artisan
            - queue:work
          imagePullPolicy: Never
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 82
          resources:
            requests:
              memory: "512Mi"
              cpu: 200m
            limits:
              memory: "512Mi"

          ports:
            - containerPort: 9001
          volumeMounts:
            - name: logs
              mountPath: /var/www/html/storage/logs
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
            - name: testing
              mountPath: /var/www/html/storage/framework/testing
            - name: cache2
              mountPath: /var/www/html/bootstrap/cache
      volumes:
        - name: logs
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: testing
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
        - name: cache2
          emptyDir: {}
