kubernetes/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume
          resources:
            requests:
              memory: "512Mi"
              cpu: 200m
            limits:
              memory: "512Mi"
             
          ports:
            - containerPort: 3306
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
