kubernetes/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: web-port
    port: 80
    targetPort: 80
  - name: socket-port
    port: 6001
    targetPort: 6001
