kubernetes/nginx-socket-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-socket-service
spec:
  selector:
    app: nginx
  ports:
  - name: socket-port
    port: 80
    targetPort: 80
