kubernetes/php-service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php
  ports:
  - port: 9000
    targetPort: 9000
